# AFRO_CLINIC_SAFETY_BENCHMARK

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/combined/: all_prompts.jsonl
data/kenya/: README.md  prompts.jsonl
data/nigeria/: README.md  prompts.jsonl
data/rwanda/: README.md  prompts.jsonl
docs/: extending_to_new_countries.md  scoring_methodology.md
notebooks/: 01_explore_benchmark.py  02_analyse_results.py
scripts/: generate_report.py  run_evaluation.py  validate_data.py
src/clinicalsafetybench/: __init__.py  benchmark.py  cli.py  evaluator.py
src/clinicalsafetybench/models/: __init__.py  anthropic_adapter.py  base.py  google_adapter.py  openai_adapter.py
src/clinicalsafetybench/reporting/: __init__.py  report_generator.py
src/clinicalsafetybench/scoring/: __init__.py  metrics.py  rubric.py
tests/: test_benchmark.py
